; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/benet/extr_be_cmds.c_fill_wrb_tags.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/benet/extr_be_cmds.c_fill_wrb_tags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.be_mcc_wrb = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.be_mcc_wrb*, i64)* @fill_wrb_tags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_wrb_tags(%struct.be_mcc_wrb* %0, i64 %1) #0 {
  %3 = alloca %struct.be_mcc_wrb*, align 8
  %4 = alloca i64, align 8
  store %struct.be_mcc_wrb* %0, %struct.be_mcc_wrb** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = and i64 %5, 4294967295
  %7 = load %struct.be_mcc_wrb*, %struct.be_mcc_wrb** %3, align 8
  %8 = getelementptr inbounds %struct.be_mcc_wrb, %struct.be_mcc_wrb* %7, i32 0, i32 0
  store i64 %6, i64* %8, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @upper_32_bits(i64 %9)
  %11 = load %struct.be_mcc_wrb*, %struct.be_mcc_wrb** %3, align 8
  %12 = getelementptr inbounds %struct.be_mcc_wrb, %struct.be_mcc_wrb* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 8
  ret void
}

declare dso_local i32 @upper_32_bits(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
